--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  email = abronan@docker.com
+  email = alexandre.beslic@gmail.com
   name = Alexandre Beslic
 [filter "media"]
   required = true
@@ -18,3 +18,10 @@
   wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
   bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
   bdone = "!f() { git checkout ${1-master} && git up && git bclean ${1-master}; }; f"
+[core]
+  editor = vim
+  mergetool = vimdiff
+[color]
+  ui = true
+[merge]
+  tool = vimdiff
