add rust clippy to vscode settings
Signed-off-by: Alexandre Beslic <abeslic@abronan.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,9 @@
     "extensions.autoUpdate": true,
 
     // Rusty Code
+    "rust.features": ["clippy"],
     "rust.formatOnSave": false,
     "rust.checkOnSave": true,
-    "rust.useNewErrorFormat": true
+    "rust.useNewErrorFormat": true,
+    "vsicons.dontShowNewVersionMessage": true
 }
