add alsa and pulseaudio config files, updates to .zshrc
Signed-off-by: Alexandre Beslic <alexandre.beslic@gmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  email = alexandre.beslic@gmail.com
+  email = ab-----@ab-----.com
   name = Alexandre Beslic
 [filter "media"]
   required = true
