update mpd/alsa/pulse config with sb katana 24-bit/96kHz
Signed-off-by: Alexandre Beslic <alexandre.beslic@gmail.com>

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -68,8 +68,9 @@ input {
 # Audio Output ---------------------------------------------
 audio_output {
   type                  "alsa"
-  name                  "HDA Intel PCH - ALC892 Analog"
-  device                "hw:1,0"
+  name                  "Sound BlasterX Katana"
+  device                "hw:3,0"
+  format                "96000:24:*"
   auto_resample         "no"
   auto_format           "no"
   auto_channels         "no"
