--- a/.config/pulse/daemon.conf
+++ b/.config/pulse/daemon.conf
@@ -30,11 +30,11 @@
 ; lock-memory = no
 cpu-limit = no
 
-high-priority = yes
+; high-priority = yes
 ; nice-level = -11
 
-; realtime-scheduling = yes
-; realtime-priority = 5
+realtime-scheduling = yes
+realtime-priority = 5
 
 ; exit-idle-time = 20
 ; scache-idle-time = 20
@@ -50,7 +50,7 @@ high-priority = yes
 ; log-time = no
 ; log-backtrace = 0
 
-resample-method = speex-float-7
+; resample-method = speex-float-1
 ; enable-remixing = yes
 ; enable-lfe-remixing = no
 ; lfe-crossover-freq = 0
@@ -74,10 +74,10 @@ flat-volumes = no
 ; rlimit-rtprio = 9
 ; rlimit-rttime = 200000
 
-; default-sample-format = s16le
+default-sample-format = s24-32le
 default-sample-rate = 48000
 ; default-sample-rate = 44100
-alternate-sample-rate = 192000
+alternate-sample-rate = 96000
 ; default-sample-channels = 2
 ; default-channel-map = front-left,front-right
 
