--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 // Place your settings in this file to overwrite the default settings
 {
     // Editor
-    "editor.fontFamily": "Hasklig",
+    "editor.fontFamily": "Hasklig Medium",
     "editor.fontWeight": "normal",
     "editor.fontSize": 14,
     "editor.cursorBlinking": "phase",
@@ -17,43 +17,78 @@
     // Updates
     "update.channel": "none",
     // Window
-    "window.zoomLevel": 0,
+    "window.zoomLevel": 0.5,
     "window.restoreFullscreen": false,
+    "window.menuBarVisibility": "toggle",
     // Workbench
     "workbench.sideBar.location": "left",
     "workbench.statusBar.visible": true,
     "workbench.activityBar.visible": false,
-    "window.menuBarVisibility": "toggle",
+    "workbench.editor.openPositioning": "left",
+    "workbench.colorTheme": "Liqube Dark Code",
+    "workbench.iconTheme": "vs-nomo-dark",
+    "workbench.startupEditor": "newUntitledFile",
+    "workbench.colorCustomizations": {
+        "statusBar.background": "#1A1A1A",
+        "statusBar.noFolderBackground": "#0A0A0D",
+        "statusBar.debuggingBackground": "#5f5f5f"
+    },
     // Telemetry
     "telemetry.enableTelemetry": false,
     "telemetry.enableCrashReporter": false,
     // Extensions
     "extensions.autoUpdate": true,
     "extensions.ignoreRecommendations": true,
-    // Rusty Code
-    "rust.mode": "rls",
-    "rust.rls": {
-        "useRustfmt": true
-    },
-    "rust.actionOnSave": "clippy",
-    "rust.showOutput": false,
-    "rust.rustup": {
-        "toolchain": "nightly-x86_64-unknown-linux-gnu",
-        "nightlyToolchain": "nightly-x86_64-unknown-linux-gnu"
-    },
+    // Rust extension
+    "rust.build_on_save": false,
+    "rust.all_features": true,
+    "rust.goto_def_racer_fallback": true,
+    "rust.unstable_features": true,
+    "rust-client.updateOnStartup": true,
+    "rust-client.channel": "nightly",
     // Integrated Terminal
     "terminal.integrated.fontFamily": "Hasklig Medium",
-    "terminal.integrated.fontLigatures": true,
     "terminal.integrated.fontSize": 13,
     // VS icons
     "vsicons.dontShowNewVersionMessage": true,
-    "workbench.colorTheme": "Liqube Dark Code",
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.startupEditor": "newUntitledFile",
-    "workbench.panel.location": "bottom",
-    "workbench.colorCustomizations": {
-        "statusBar.background": "#1A1A1A",
-        "statusBar.noFolderBackground": "#0A0A0D",
-        "statusBar.debuggingBackground": "#5f5f5f"
-    }
+    // Todo Highlight
+    "todohighlight.isEnable": true,
+    "todohighlight.isCaseSensitive": true,
+    "todohighlight.keywords": [
+        {
+            "text": "TODO:",
+            "color": "gray",
+            "border": "1px solid gray",
+            "borderRadius": "2px",
+            "backgroundColor": "rgba(0,0,0,.2)"
+        },
+        {
+            "text": "DEBUG:",
+            "color": "gray",
+            "border": "1px solid gray",
+            "borderRadius": "2px",
+            "backgroundColor": "rgba(0,0,0,.2)"
+        },
+        {
+            "text": "FIXME:",
+            "color": "gray",
+            "border": "1px solid gray",
+            "borderRadius": "2px",
+            "backgroundColor": "rgba(0,0,0,.2)"
+        },
+        {
+            "text": "NOTE:",
+            "color": "gray",
+            "border": "1px solid gray",
+            "borderRadius": "2px",
+            "backgroundColor": "rgba(0,0,0,.2)"
+        },
+        {
+            "text": "HACK:",
+            "color": "gray",
+            "border": "1px solid gray",
+            "borderRadius": "2px",
+            "backgroundColor": "rgba(0,0,0,.2)"
+        }
+    ]
 }
