gitconfig: Add redo alias
Signed-off-by: Alexandre Beslic <abeslic@abronan.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
   save = !git add -A && git commit -m 'SAVEPOINT'
   wip = !git add -u && git commit -m "WIP" 
   undo = reset HEAD~1 --mixed
+  redo = reset HEAD@{1}
   amend = commit -a --amend
   wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
   bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
