Update mpd conf to use device name, center vscode by default with awesome
Signed-off-by: Alexandre Beslic <abeslic@abronan.com>

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -69,7 +69,7 @@ input {
 audio_output {
   type                  "alsa"
   name                  "Sound BlasterX Katana"
-  device                "hw:3,0"
+  device                "front:CARD=Katana,DEV=0" # find out using 'aplay -L'
   format                "96000:24:*"
   auto_resample         "no"
   auto_format           "no"
